# carbonbench

./: .gitignore  README.md  pyproject.toml
data/: create_carbontracker_dataset.py  create_obspack_dataset.py  download_from_huggingface.py  upload_to_huggingface.py
plotting/first_paper/: crossresolution_scores.py  errorpatterns_per_model.py  how_many_training_years.py  maps_per_model.py  massconserve_per_model.py  model_intercomparison_barplots.py  quarterly_key_metrics_per_model.py  rmse_patterns_intercomparison.py  spectralbias_per_model.py  speed_intercomparison_paretoplot.py  timeseries_per_model.py
plotting/first_paper/plots_per_model/: maps_1013hpa_rollout.py  maps_850hpa.py  maps_totalcolumn.py  massconservation.py  obspack.py  quarterly_key_metrics.py  quarterly_key_metrics_rollout.py  rmse_patterns.py  zonalspectrum.py
transport_models/carbontracker/sfno/sfno_S_latlon5.625_l10_6h/: train.py
transport_models/carbontracker_lowres/flowmatching_dev/: train.py  train.slurm
transport_models/carbontracker_lowres/flowmatching_dev/flowmatching_firstrun_20250730_dev/: train.py  train.slurm
transport_models/carbontracker_lowres/flowmatching_dev/flowmatching_test_20250730_dev/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_L_m0-m2_tsaf/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_L_m0-m2_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_L_m0-m3_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_L_m0-m3_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m2/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m2_tsaf/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m2_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m2_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m3/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m3_tsaf/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m3_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m3_tsaf_specloss_long/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_M_m0-m3_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_Mo_m0-m3/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_Mo_m0-m3_tsaf/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_Mo_m0-m3_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_S_m0-m2_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_S_m0-m3_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_S_m0-m3_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_XL_m0-m2_tsaf/: train.py
transport_models/carbontracker_lowres/graphcast/graphcast_XL_m0-m2_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L_tsaf/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L_tsaf_specloss_aroma/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L_tsaf_specloss_long/: train.py
transport_models/carbontracker_lowres/sfno/sfno_L_tsaf_speclosscut/: train.py
transport_models/carbontracker_lowres/sfno/sfno_M/: train.py
transport_models/carbontracker_lowres/sfno/sfno_M_tsaf/: train.py
transport_models/carbontracker_lowres/sfno/sfno_M_tsaf_specloss/: train.py
transport_models/carbontracker_lowres/unet/unet_M/: train.py
tutorial/: eval_swintransformer.ipynb
(+33 files in other folders)
